# tmail

./: .gitattributes  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  SECURITY.md  mail.py  pyproject.toml
docs/: development.md  guide.md
src/tmail/: api.py  cli.py  storage.py  ui.py
