[project]
name = "tmail"
version = "0.1.0"
description = "CLI tool for generating temporary email addresses and viewing inboxes"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "requests",
    "rich",
    "pyfiglet",
]

[project.scripts]
tmail = "tmail.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tmail"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
