[project]
name = "tmail-cli"
version = "0.2.0"
description = "CLI tool for generating temporary email addresses and viewing inboxes"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "requests",
    "rich",
    "pyfiglet",
    "pyperclip",
]

[project.scripts]
tmail = "tmail.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tmail"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
